--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     <div class="col-sm-8">
                         <p class="pt-5">
                         My name is Jeremy Persing and I am from a small town in Northern California called Yreka. I currently attend Sacramento
-                        State University and am a senior majoring in Computer Science. I have always loved problem solving and creating different things,
-                        so programming and Web Development are areas that I enjoy. Ultimately, I want to make an impact on the world by helping others reach their goals
+                        State University and am a senior majoring in Computer Science. I have always loved problem solving and engineering,
+                        so programming and Web Development are areas that clicked with me. Ultimately, I want to make an impact on the world by helping others reach their goals
                         and find fulfillment in what they do.
                         </p>
                     </div>
@@ -71,8 +71,23 @@
         <div id="contact-information">
             <section>
                 <h2>Contact Me</h2>
-                
+                <div class='container pb-3 pt-3'>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <a href="mailto:jpersing1999@gmail.com"><img class="contact-photo" src="./gmail.jpg" height="50px" title="Gmail" alt="Image for Gmail link"></a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="https://www.linkedin.com/in/jeremy-persing-376aa11a2/"><img class="contact-photo" src="linkedin-logo.png" height="50px"></a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="https://github.com/JeremyPersing"><img class='contact-photo' src='./github_logo.png' height='50px'></a>
+                        </div>
+                    </div>
+                </div>
             </section>
+        </div>
+        <div id="copyright" class="pt-5">
+            <p class="text-center">Jeremy Persing &copy; All Rights Reserved.</p>
         </div>
     </body>
 </html>
