First project added

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
 
                 <div class='container'>
                     <div class="row">
-                        <div class="col-sm">
-                            Resume Builder
+                        <div class="col-sm ">
+                            <a href="https://jeremypersing.github.io/resume-project">
+                                <img class="img-thumbnail" src="resume-img.jpg" alt="Resume Builder thumbnail">
+                            </a>
+                            <strong>Resume Builder</strong>
                         </div>
                         <div class="col-sm">
                             Project Two
