Memory Game added

--- a/index.html
+++ b/index.html
@@ -26,27 +26,31 @@
 
                 <div class='container'>
                     <div class="row">
-                        <div class="col-sm ">
+                        <div class="col-sm-4">
+                            Project 1
+                        </div>
+                        <div class="col-sm-4">
+                            Project Two
+                        </div>
+                        <div class="col-sm-4">
+                            Project Three
+                        </div>
+                    </div>
+                    <div class='row'>
+                        <h3>React Projects</h3>
+                        <div class="col-sm-4">
                             <a href="https://jeremypersing.github.io/resume-project">
                                 <img class="img-thumbnail" src="resume-img.jpg" alt="Resume Builder thumbnail">
                             </a>
                             <strong>Resume Builder</strong>
                         </div>
-                        <div class="col-sm">
-                            Project Two
+                        <div class="col-sm-4">
+                            <a href="https://jeremypersing.github.io/memory-project">
+                                <img class="img-thumbnail" src="memory-game.jpg" alt="Mascot Mania thumbnail">
+                            </a>
+                            <strong>Memory Game</strong>
                         </div>
-                        <div class="col-sm">
-                            Project Three
-                        </div>
-                    </div>
-                    <div class='row'>
-                        <div class="col-sm">
-                            Project Four
-                        </div>
-                        <div class="col-sm">
-                            Project Five
-                        </div>
-                        <div class="col-sm">
+                        <div class="col-sm-4">
                             Project Six
                         </div>
                     </div>
