--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                             Project Three
                         </div>
                     </div>
+                    <h3 class='text-center'>React Projects</h3>
                     <div class='row'>
-                        <h3>React Projects</h3>
                         <div class="col-sm-4">
                             <a href="https://jeremypersing.github.io/resume-project">
                                 <img class="img-thumbnail" src="resume-img.jpg" alt="Resume Builder thumbnail">
