--- a/index.html
+++ b/index.html
@@ -26,32 +26,35 @@
 
                 <div class='container'>
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-md-4">
                             Project 1
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-md-4">
                             Project Two
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-md-4">
                             Project Three
                         </div>
                     </div>
                     <h3 class='text-center'>React Projects</h3>
                     <div class='row'>
-                        <div class="col-sm-4">
+                        <div class="col-md-4">
                             <a href="https://jeremypersing.github.io/resume-project">
                                 <img class="img-thumbnail" src="resume-img.jpg" alt="Resume Builder thumbnail">
                             </a>
                             <strong>Resume Builder</strong>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-md-4">
                             <a href="https://jeremypersing.github.io/memory-project">
                                 <img class="img-thumbnail" src="memory-game.jpg" alt="Mascot Mania thumbnail">
                             </a>
                             <strong>Memory Game</strong>
                         </div>
-                        <div class="col-sm-4">
-                            Project Six
+                        <div class="col-md-4">
+                            <a href="https://jeremypersing.github.io/shopping-cart">
+                                <img class="img-thumbnail" src="shopping-cart.jpg" alt="Shopping Cart thumbnail">
+                            </a>
+                            <strong>Shopping Cart</strong>
                         </div>
                     </div>
                 </div>
@@ -61,16 +64,18 @@
             <section>
                 <h2>About Me</h2>
                 <div class="container">
-                    <div class="col-sm-4">
-
-                    </div>
-                    <div class="col-sm-8">
-                        <p class="pt-5">
-                        My name is Jeremy Persing and I am from a small town in Northern California called Yreka. I currently attend Sacramento
-                        State University and am a senior majoring in Computer Science. I have always loved problem solving and engineering,
-                        so programming and Web Development are areas that clicked with me. Ultimately, I want to make an impact on the world by helping others reach their goals
-                        and find fulfillment in what they do.
-                        </p>
+                    <div class="row pt-3">
+                        <div class="col-8">
+                            <p>
+                                My name is Jeremy Persing and I am from a small town in Northern California called Yreka. I currently attend Sacramento
+                                State University and am a senior majoring in Computer Science. I have always loved problem solving and engineering,
+                                so programming and Web Development are areas that clicked with me. Ultimately, I want to make an impact on the world by helping others reach their goals
+                                and find fulfillment in what they do.
+                            </p>
+                        </div>
+                        <div class="col-4">
+                            Place photo here
+                        </div>
                     </div>
                 </div>
             </section>
@@ -80,13 +85,13 @@
                 <h2>Contact Me</h2>
                 <div class='container pb-3 pt-3'>
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-md-4">
                             <a href="mailto:jpersing1999@gmail.com"><img class="contact-photo" src="./gmail.jpg" height="50px" title="Gmail" alt="Image for Gmail link"></a>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-md-4">
                             <a href="https://www.linkedin.com/in/jeremy-persing-376aa11a2/"><img class="contact-photo" src="linkedin-logo.png" height="50px"></a>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-md-4">
                             <a href="https://github.com/JeremyPersing"><img class='contact-photo' src='./github_logo.png' height='50px'></a>
                         </div>
                     </div>
