Weather App added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                 <div class='container'>
                     <div class="row">
                         <div class="col-md-4">
-                            Project 1
+                            <a href="https://jeremypersing.github.io/weather-app/">
+                                <img  class="img-thumbnail" src="./weather-app.jpg" alt="Weather App Thumbnail">
+                            </a>
+                            <strong>Weather App</strong>
                         </div>
                         <div class="col-md-4">
                             Project Two
