Updated LinkedIn link

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <a href="mailto:jpersing1999@gmail.com"><img class="contact-photo" src="./gmail.jpg" height="50px" title="Gmail" alt="Image for Gmail link"></a>
                         </div>
                         <div class="col-md-4">
-                            <a href="https://www.linkedin.com/in/jeremy-persing-376aa11a2/"><img class="contact-photo" src="linkedin-logo.png" height="50px"></a>
+                            <a href="https://www.linkedin.com/in/jeremy-persing/"><img class="contact-photo" src="linkedin-logo.png" height="50px"></a>
                         </div>
                         <div class="col-md-4">
                             <a href="https://github.com/JeremyPersing"><img class='contact-photo' src='./github_logo.png' height='50px'></a>
