--- a/index.html
+++ b/index.html
@@ -64,23 +64,14 @@
             </section>
         </div>
         <div id="about-me">
-            <section>
+            <section class='container'>
                 <h2>About Me</h2>
-                <div class="container">
-                    <div class="row pt-3">
-                        <div class="col-8">
-                            <p>
-                                My name is Jeremy Persing and I am from a small town in Northern California called Yreka. I currently attend Sacramento
-                                State University and am a senior majoring in Computer Science. I have always loved problem solving and engineering,
-                                so programming and Web Development are areas that clicked with me. Ultimately, I want to make an impact on the world by helping others reach their goals
-                                and find fulfillment in what they do.
-                            </p>
-                        </div>
-                        <div class="col-4">
-                            Place photo here
-                        </div>
-                    </div>
-                </div>
+                <p>
+                    My name is Jeremy Persing and I am from a small town in Northern California called Yreka. I currently attend Sacramento
+                    State University and am a senior majoring in Computer Science. I have always loved problem solving and engineering,
+                    so programming and Web Development are areas that clicked with me. Ultimately, I want to make an impact on the world by helping others reach their goals
+                    and find fulfillment in what they do.
+                </p> 
             </section>
         </div>
         <div id="contact-information">
@@ -88,14 +79,17 @@
                 <h2>Contact Me</h2>
                 <div class='container pb-3 pt-3'>
                     <div class="row">
-                        <div class="col-md-4">
-                            <a href="mailto:jpersing1999@gmail.com"><img class="contact-photo" src="./gmail.jpg" height="50px" title="Gmail" alt="Image for Gmail link"></a>
+                        <div class='col-lg-3'>
+                            <a href='./Jeremy_Persing_Resume.pdf' download><img class="contact-photo" src="./resume-logo.png" alt="Resume Logo" height="50px"></a>
                         </div>
-                        <div class="col-md-4">
-                            <a href="https://www.linkedin.com/in/jeremy-persing/"><img class="contact-photo" src="linkedin-logo.png" height="50px"></a>
+                        <div class="col-lg-3">
+                            <a href="https://www.linkedin.com/in/jeremy-persing/"><img class="contact-photo" src="./linkedin-logo.png" alt="LinkedIn Logo" height="50px"></a>
                         </div>
-                        <div class="col-md-4">
-                            <a href="https://github.com/JeremyPersing"><img class='contact-photo' src='./github_logo.png' height='50px'></a>
+                        <div class="col-lg-3">
+                            <a href="https://github.com/JeremyPersing"><img class='contact-photo' src='./github_logo.png' alt="Github Logo" height='50px'></a>
+                        </div>
+                        <div class="col-lg-3">
+                            <a href="mailto:jpersing1999@gmail.com"><img class="contact-photo" src="./gmail.jpg" height="50px" height="Gmail Logo" alt="Image for Gmail link"></a>
                         </div>
                     </div>
                 </div>
