--- a/index.html
+++ b/index.html
@@ -24,27 +24,35 @@
             <section>
                 <h2>Personal Projects</h2>
                 <div class='container'>
-                    <div class="row">
+                    <div class='row'>
+                        <div class='col-md-6'>
+                            <a href="https://gamblers-paradise.herokuapp.com/">
+                                <img  class="img-thumbnail" src="./casino.jpg" alt="Casino App Thumbnail">
+                            </a>
+                            <strong>Casino</strong>
+                        </div>
                         <div class="col-md-6">
                             <a href="https://jeremypersing.github.io/weather-app/">
                                 <img  class="img-thumbnail" src="./weather-app.jpg" alt="Weather App Thumbnail">
                             </a>
                             <strong>Weather App</strong>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col-md-6">
                             <a href="https://jeremypersing.github.io/shopping-cart">
                                 <img class="img-thumbnail" src="shopping-cart.jpg" alt="Shopping Cart thumbnail">
                             </a>
                             <strong>Shopping Cart</strong>
                         </div>
-                    </div>
-                    <div class='row'>
                         <div class="col-md-6">
                             <a href="https://jeremypersing.github.io/resume-project">
                                 <img class="img-thumbnail" src="resume-img.jpg" alt="Resume Builder thumbnail">
                             </a>
                             <strong>Resume Builder</strong>
                         </div>
+                    </div>
+                    <div class='row'>
                         <div class="col-md-6">
                             <a href="https://jeremypersing.github.io/memory-project">
                                 <img class="img-thumbnail" src="memory-game.jpg" alt="Mascot Mania thumbnail">
@@ -59,7 +67,7 @@
             <section class='container'>
                 <h2>About Me</h2>
                 <p>
-                    My name is Jeremy Persing and I am from a small town in Northern California called Yreka. I currently attend Sacramento
+                    My name is Jeremy Persing and I am from a small town in Northern California. I currently attend Sacramento
                     State University and am a senior majoring in Computer Science. I have always loved problem solving and engineering,
                     so programming and Web Development are areas that clicked with me. Ultimately, I want to make an impact on the world by helping others reach their goals
                     and find fulfillment in what they do.
