--- a/index.html
+++ b/index.html
@@ -7,96 +7,95 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
+        <script src='script.js'></script>
     </head>
-    <body>
+    <body onload="typeWriter()">
         <div id="header">
             <header>
-                <h1>Jeremy Persing Web Development</h1>
+                <h1 id='name'></h1>
             </header>
-            <a href="#projects">
+            <a id='arrow' style="visibility: hidden;" href="#projects">
                 <svg id="arrow" width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-chevron-compact-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z"/>
                 </svg>
             </a>
         </div>
-        <div id="projects">
-            <section>
-                <h2>Personal Projects</h2>
-                <div class='container'>
-                    <div class='row'>
-                        <div class='col-md-6'>
-                            <a href="https://gamblers-paradise.herokuapp.com/">
-                                <img  class="img-thumbnail" src="./casino.jpg" alt="Casino App Thumbnail">
-                            </a>
-                            <strong>Casino</strong>
+        <div class='work'>
+            <div id="projects">
+                <section>
+                    <h2 class='mb-3'>Personal Projects</h2>
+                    <div class='container'>
+                        <div class='row mb-3'>
+                            <div class='col-md-6'>
+                                <a href="https://gamblers-paradise.herokuapp.com/">
+                                    <img  class="img-thumbnail" src="./casino.jpg" alt="Casino App Thumbnail">
+                                </a>
+                                <strong>Casino</strong>
+                            </div>
+                            <div class="col-md-6">
+                                <a href="https://jeremypersing.github.io/weather-app/">
+                                    <img  class="img-thumbnail" src="./weather-app.jpg" alt="Weather App Thumbnail">
+                                </a>
+                                <strong>Weather App</strong>
+                            </div>
                         </div>
-                        <div class="col-md-6">
-                            <a href="https://jeremypersing.github.io/weather-app/">
-                                <img  class="img-thumbnail" src="./weather-app.jpg" alt="Weather App Thumbnail">
-                            </a>
-                            <strong>Weather App</strong>
+                        <div class="row mb-3">
+                            <div class="col-md-6">
+                                <a href="https://jeremypersing.github.io/shopping-cart">
+                                    <img class="img-thumbnail" src="shopping-cart.jpg" alt="Shopping Cart thumbnail">
+                                </a>
+                                <strong>Shopping Cart</strong>
+                            </div>
+                            <div class="col-md-6">
+                                <a href="https://jeremypersing.github.io/resume-project">
+                                    <img class="img-thumbnail" src="resume-img.jpg" alt="Resume Builder thumbnail">
+                                </a>
+                                <strong>Resume Builder</strong>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <a href="https://jeremypersing.github.io/shopping-cart">
-                                <img class="img-thumbnail" src="shopping-cart.jpg" alt="Shopping Cart thumbnail">
-                            </a>
-                            <strong>Shopping Cart</strong>
-                        </div>
-                        <div class="col-md-6">
-                            <a href="https://jeremypersing.github.io/resume-project">
-                                <img class="img-thumbnail" src="resume-img.jpg" alt="Resume Builder thumbnail">
-                            </a>
-                            <strong>Resume Builder</strong>
-                        </div>
-                    </div>
-                    <div class='row'>
-                        <div class="col-md-6">
-                            <a href="https://jeremypersing.github.io/memory-project">
-                                <img class="img-thumbnail" src="memory-game.jpg" alt="Mascot Mania thumbnail">
-                            </a>
-                            <strong>Memory Game</strong>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
-        <div id="about-me">
-            <section class='container'>
-                <h2>About Me</h2>
-                <p>
-                    My name is Jeremy Persing and I am from a small town in Northern California. I currently attend Sacramento
-                    State University and am a senior majoring in Computer Science. I have always loved problem solving and engineering,
-                    so programming and Web Development are areas that clicked with me. Ultimately, I want to make an impact on the world by helping others reach their goals
-                    and find fulfillment in what they do.
-                </p> 
-            </section>
-        </div>
-        <div id="contact-information">
-            <section>
-                <h2>Contact Me</h2>
-                <div class='container pb-3 pt-3'>
-                    <div class="row">
-                        <div class='col-lg-3'>
-                            <a href='./Jeremy_Persing_Resume.pdf' download><img class="contact-photo" src="./resume-logo.png" alt="Resume Logo" height="50px"></a>
-                        </div>
-                        <div class="col-lg-3">
-                            <a href="https://www.linkedin.com/in/jeremy-persing/"><img class="contact-photo" src="./linkedin-logo.png" alt="LinkedIn Logo" height="50px"></a>
-                        </div>
-                        <div class="col-lg-3">
-                            <a href="https://github.com/JeremyPersing"><img class='contact-photo' src='./github_logo.png' alt="Github Logo" height='50px'></a>
-                        </div>
-                        <div class="col-lg-3">
-                            <a href="mailto:jpersing1999@gmail.com"><img class="contact-photo" src="./gmail.jpg" height="50px" height="Gmail Logo" alt="Image for Gmail link"></a>
+                        <div class='row'>
+                            <div class="col-md-6 offset-md-3">
+                                <a href="https://jeremypersing.github.io/memory-project">
+                                    <img class="img-thumbnail" src="memory-game.jpg" alt="Mascot Mania thumbnail">
+                                </a>
+                                <strong>Memory Game</strong>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </section>
-        </div>
-        <div id="copyright" class="pt-5">
-            <p class="text-center">Jeremy Persing &copy; All Rights Reserved.</p>
+                </section>
+            </div>
+            <div id="about-me">
+                <section class='container'>
+                    <h2>About Me</h2>
+                    <p>
+                        Hi! My name is Jeremy Persing. I am from Northern California and currently attend Sacramento
+                        State University and am a senior majoring in Computer Science. I have always loved problem solving and engineering,
+                        so programming and Web Development are areas that clicked with me. Ultimately, I want to make an impact on the world by helping others reach their goals
+                        and find fulfillment in what they do.
+                    </p> 
+                </section>
+            </div>
+            <div id="contact-information">
+                <section>
+                    <h2>Contact Me</h2>
+                    <div class='container pb-3 pt-3'>
+                        <div class="row">
+                            <div class="col-2 offset-2">
+                                <a href='./Jeremy_Persing_Resume.pdf' download><img class="contact-photo" src="./cv.svg" alt="Resume Logo" height="50px"></a>
+                            </div>
+                            <div class="col-2">
+                                <a href="https://www.linkedin.com/in/jeremy-persing/"><img class="contact-photo" src="./linkedin.png" alt="LinkedIn Logo" height="50px"></a>
+                            </div>
+                            <div class="col-2">
+                                <a href="https://github.com/JeremyPersing"><img class='contact-photo' src='./icons8-github.svg' alt="Github Logo" height='50px'></a>
+                            </div>
+                            <div class="col-2">
+                                <a href="mailto:jpersing1999@gmail.com"><img class="contact-photo" src="./mail.svg" height="50px" height="Gmail Logo" alt="Image for Gmail link"></a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </div>
     </body>
 </html>
