--- a/index.html
+++ b/index.html
@@ -67,12 +67,19 @@
             <div id="about-me">
                 <section class='container'>
                     <h2>About Me</h2>
-                    <p>
-                        Hi! My name is Jeremy Persing. I am from Northern California and currently attend Sacramento
-                        State University and am a senior majoring in Computer Science. I have always loved problem solving and engineering,
-                        so programming and Web Development are areas that clicked with me. Ultimately, I want to make an impact on the world by helping others reach their goals
-                        and find fulfillment in what they do.
-                    </p> 
+                    <div class='row mt-5'>
+                        <div class='col-lg-4'>
+                            <img class='border-photo' src='personal-image.jpg' alt='Personal Image' height='300px'>
+                        </div>
+                        <div class="col-lg-8 mt-5">
+                            <p>
+                                Hi! My name is Jeremy Persing. I am from Northern California and currently attend Sacramento
+                                State University and am a senior majoring in Computer Science. I have always loved problem solving and engineering,
+                                so programming and Web Development are areas that clicked with me. Ultimately, I want to make an impact on the world by helping others reach their goals
+                                and find fulfillment in what they do.
+                            </p> 
+                        </div>
+                    </div>
                 </section>
             </div>
             <div id="contact-information">
