--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
                     <div class='container pb-3 pt-3'>
                         <div class="row">
                             <div class="col-2 offset-2">
-                                <a href='./Jeremy_Persing_Resume.pdf' download><img class="contact-photo" src="./cv.svg" alt="Resume Logo" height="50px"></a>
+                                <a href='./Jeremy_Persing_Resume.pdf' download><img class="contact-photo" src="./cv.svg" alt="Resume Logo" title='My Resume' height="50px"></a>
                             </div>
                             <div class="col-2">
-                                <a href="https://www.linkedin.com/in/jeremy-persing/"><img class="contact-photo" src="./linkedin.png" alt="LinkedIn Logo" height="50px"></a>
+                                <a href="https://www.linkedin.com/in/jeremy-persing/"><img class="contact-photo" src="./linkedin.png" alt="LinkedIn Logo" title='My LinkedIn' height="50px"></a>
                             </div>
                             <div class="col-2">
-                                <a href="https://github.com/JeremyPersing"><img class='contact-photo' src='./icons8-github.svg' alt="Github Logo" height='50px'></a>
+                                <a href="https://github.com/JeremyPersing"><img class='contact-photo' src='./icons8-github.svg' title='My Github' alt="Github Logo" height='50px'></a>
                             </div>
                             <div class="col-2">
-                                <a href="mailto:jpersing1999@gmail.com"><img class="contact-photo" src="./mail.svg" height="50px" height="Gmail Logo" alt="Image for Gmail link"></a>
+                                <a href="mailto:jpersing1999@gmail.com"><img class="contact-photo" src="./mail.svg" height="50px" height="Gmail Logo" title='My Email' alt="Image for Gmail link"></a>
                             </div>
                         </div>
                     </div>
