--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
         <title>Jeremy Persing Portfolio</title>
         <meta charset="UTF-8">
         <meta name="description" content="Jeremy Persing Portfolio">
-        <meta name="keywords" content="Jeremy Persing, Jeremy Persing Portfolio, Web Design, Web Development, Computer Science, Databases">
+        <meta name="keywords" content="Jeremy Persing, Jeremy Persing Portfolio, Web Design, Web Development, Computer Science, Databases
+                                        Sacramento State, Website, Website Builder, Computer Science, Software Engineer">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
         <script src='script.js'></script>
     </head>
     <body onload="typeWriter()">
@@ -23,7 +26,7 @@
         <div class='work'>
             <div id="projects">
                 <section>
-                    <h2 class='mb-3'>Personal Projects</h2>
+                    <h1 class='mb-3'>Personal Projects</h1>
                     <div class='container'>
                         <div class='row mb-3'>
                             <div class='col-md-6'>
@@ -66,13 +69,13 @@
             </div>
             <div id="about-me">
                 <section class='container'>
-                    <h2>About Me</h2>
-                    <div class='row mt-5'>
+                    <h1>About Me</h1>
+                    <div class='row mt-3'>
                         <div class='col-lg-4'>
                             <img class='border-photo' src='personal-image.jpg' alt='Personal Image' height='300px'>
                         </div>
                         <div class="col-lg-8 mt-5">
-                            <p>
+                            <p class='about-me-text'>
                                 Hi! My name is Jeremy Persing. I am from Northern California and currently attend Sacramento
                                 State University and am a senior majoring in Computer Science. I have always loved problem solving and engineering,
                                 so programming and Web Development are areas that clicked with me. Ultimately, I want to make an impact on the world by helping others reach their goals
@@ -84,7 +87,7 @@
             </div>
             <div id="contact-information">
                 <section>
-                    <h2>Contact Me</h2>
+                    <h1>Contact Me</h1>
                     <div class='container pb-3 pt-3'>
                         <div class="row">
                             <div class="col-2 offset-2">
