--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class='container pb-3 pt-3'>
                         <div class="row">
                             <div class="col-2 offset-2">
-                                <a href='./Jeremy_Persing_Resume.pdf' download><img class="contact-photo" src="./cv.svg" alt="Resume Logo" title='My Resume' height="50px"></a>
+                                <a href='./Tech Resume.pdf' download><img class="contact-photo" src="./cv.svg" alt="Resume Logo" title='My Resume' height="50px"></a>
                             </div>
                             <div class="col-2">
                                 <a href="https://www.linkedin.com/in/jeremy-persing/"><img class="contact-photo" src="./linkedin.png" alt="LinkedIn Logo" title='My LinkedIn' height="50px"></a>
