--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">Daily Weather App</h4>
                                     <p class="mb-0 text-white-50">
-                                        This weather app= allows users to enter in their city and 
+                                        This weather app allows users to enter in their city and 
                                         will show the weather forecast in the location for the next week. 
                                         It was built with Vanilla JavaScript, HTML, and CSS.
                                     </p>
