--- a/index.html
+++ b/index.html
@@ -78,8 +78,27 @@
                         </div>
                     </div>
                 </div>
-                <!-- Project One Row-->
+
                 <h2 class='text-center mb-5'>Other Projects</h2>
+                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                    <div class="col-lg-6"><a href='https://jeremypersing.github.io/currency'><img class="img-fluid" src="assets/img/currency.png" alt="Currency Converter Thumbnail" title="See Currency Converter"/></a></div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div style='background-color: #323232;' class="text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-right">
+                                    <h4 class="text-white">Currency Conversion Application</h4>
+                                    <p class="mb-0 text-white-50">
+                                        Currency Converter is an application that takes a base currency
+                                         and another currency and displays the conversion rate between the two currencies.
+                                         It was built using React and Bootstrap.
+                                    </p>
+                                    <hr class="d-none d-lg-block mb-0 mr-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6"><a href="https://jeremypersing.github.io/weather-app/"><img class="img-fluid" src="assets/img/weather.png" alt="Weather App Thumbnail" title="See Weather App"/></a></div>
                     <div class="col-lg-6">
