--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><a href='https://jeremypersing.github.io/shopping-cart'><img class="img-fluid" src="assets/img/shopping-cart.png" alt="Shopping Cart Thumbnail" title="See Shopping Cart"/></a></div>
+                    <div class="col-lg-6"><a href='https://jeremypersing.github.io/Restaurant'><img class="img-fluid" src="assets/img/restaurant.png" alt="Golden Rush Espresso Thumbnail" title="See Golden Rush Espresso"/></a></div>
                     <div class="col-lg-6 order-lg-first">
                         <div style='background-color: #323232;' class="text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Shopping Cart Application</h4>
+                                    <h4 class="text-white">Coffee Shop Site</h4>
                                     <p class="mb-0 text-white-50">
-                                        This shopping cart application allows users to place items into a 
-                                        cart and then it gives them a subtotal for their items. It was built using React and Bootstrap.
+                                        This is a website of a local cofee shop. It shows their location, hours, drinks, contact information, and social media.
+                                        It was built using HTML, CSS, and Bootstrap.
                                     </p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
@@ -137,15 +137,15 @@
                 </div>
                 <!-- Project Three Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><a href="https://jeremypersing.github.io/resume-project"><img class="img-fluid" src="assets/img/Resume.png" alt="Resume Builder Thumbnail" title="See Resume Builder"/></a></div>
+                    <div class="col-lg-6"><a href='https://jeremypersing.github.io/shopping-cart'><img class="img-fluid" src="assets/img/shopping-cart.png" alt="Shopping Cart Thumbnail" title="See Shopping Cart"/></a></div>
                     <div class="col-lg-6">
                         <div style='background-color: #323232;'class="text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Resume Builder</h4>
+                                    <h4 class="text-white">Shopping Cart Application</h4>
                                     <p class="mb-0 text-white-50">
-                                        This resume builder allows for users to input the information that a resume would require and 
-                                        then when the user submits their information, it will place their information in a resume format. It was built with React and Bootstrap.
+                                        This shopping cart application allows users to place items into a 
+                                        cart and then it gives them a subtotal for their items. It was built using React and Bootstrap.
                                     </p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
@@ -155,17 +155,15 @@
                 </div>
                 <!-- Project Four Row-->
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><a href='https://jeremypersing.github.io/memory-project/'><img class="img-fluid" src="assets/img/mascot.png" alt="Mascot Mania Thumbnail" title="See Mascot Mania"/></a></div>
+                    <div class="col-lg-6"><a href="https://jeremypersing.github.io/resume-project"><img class="img-fluid" src="assets/img/Resume.png" alt="Resume Builder Thumbnail" title="See Resume Builder"/></a></div>
                     <div class="col-lg-6 order-lg-first">
                         <div style='background-color: #323232;' class="text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Mascot Mania</h4>
+                                    <h4 class="text-white">Resume Builder</h4>
                                     <p class="mb-0 text-white-50">
-                                        Mascot Mania is a game that allows users to test their memories
-                                        and keeps track of their current wins and how many cards they have
-                                        gotten in a row without clicking on the same card twice.
-                                        It was built using React and Bootstrap. 
+                                        This resume builder allows for users to input the information that a resume would require and 
+                                        then when the user submits their information, it will place their information in a resume format. It was built with React and Bootstrap.
                                     </p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
